--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,90 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+.header {
+  position: auto;
+  width: auto;
+  height: 100px;
+  background-color: #f8f9fa;
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+
+.header,
+h1 {
+  text-align: left;
+  font-size: 2rem;
+  padding: 15px 20px;
+}
+
+.nav-menu {
+  width: 100%;
+  background-color: #f8f9fa;
+  color: #fff;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+  gap: 10;
+}
+
+.nav-menu a {
+  color: #050505;
+  text-decoration: none;
+  padding: 15px 20px;
+}
+.nav-menu a:hover {
+  color: brown;
+  font-weight: bold;
+  transition: scale(1.5);
+  
+}
+
+.header h1 {
+  margin: 0;
+  font-size: 2rem;
+  color: #333;
+}
+
+.page-title {
+  width: 100%;
+  text-align: center;
+  margin: 20px 0;
+  position: relative;
+}
+.page-title h1 {
+  display: inline-block;
+  font-size: 2.5rem;
+  color: #333;
+  margin: 0;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #333;
+}
+
+.image-list {
+  width: 100%;
+  height: auto;
+  padding: 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  margin: 0;
+}
+.image-item {
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.image-item img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.image-item p {
+  margin-top: 10px;
+  font-size: 1rem;
+  color: #333;
 }
