--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   margin: 0;
+  background-color: #f8f9fa;
 }
 
 .header {
@@ -18,12 +19,14 @@ body {
 h1 {
   text-align: left;
   font-size: 2rem;
+  font-style: oblique;
   padding: 15px 20px;
+  margin-left: 80px;
 }
 
 .nav-menu {
   width: 100%;
-  background-color: #f8f9fa;
+  background-color: #f4f4f4;
   color: #fff;
   display: flex;
   justify-content: space-around;
@@ -31,6 +34,7 @@ h1 {
   position: relative;
   z-index: 2;
   gap: 10;
+  padding: 20px;
 }
 
 .nav-menu a {
@@ -42,7 +46,6 @@ h1 {
   color: brown;
   font-weight: bold;
   transition: scale(1.5);
-  
 }
 
 .header h1 {
@@ -68,6 +71,7 @@ h1 {
 
 .image-list {
   width: 100%;
+  background-color: #f7f7f7;
   height: auto;
   padding: 0;
   padding-top: 60px;
@@ -87,4 +91,13 @@ h1 {
   margin-top: 10px;
   font-size: 1rem;
   color: #333;
+}
+
+.heart-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+  align-self: self-end;
 }
